  * Improve gprof support
  * Improve sgc page allocation which optimize-maximum-pages is in
    effect and the hole is overrun
  * Build a profiling set of images as well for Debian, toggle between
    all four by default via debconf
  * reset-sys-paths lisp function for moving image installation
    directories, show profiling support in banner if present
  * Fix typo in sys docs

 -- Camm Maguire <camm@enhanced.com>  Thu,  5 Aug 2004 22:48:01 +0000

gcl (2.6.3-1) unstable; urgency=high

  * Correctly parse gcc version strings in gmp3 subconfigure on arm
  * Fix variable capture error in dotimes macro
  * Better sed separator for LI-CC in unixport/makefile
  * Fix segfault in string-match
  * vs_top=sup -> (reset-top) where possible in compiler.  FIXME: a few
    items of a different form which need to set *sup-used* too.
  * Correct room report to show proper percentages when sgc is on
  * Read in RELOC environment variable if set as default in debian/rules
  * Remove local bfd libraries from libs variables as their objects are
    incorporated into libgcl and as the source directory may not be
    available at runtime
  * Remove pcl/pcl_gazonk*lsp build-generated files from source

 -- Camm Maguire <camm@enhanced.com>  Thu, 15 Jul 2004 14:26:44 -0400

gcl (2.6.2-3) unstable; urgency=low

  * Fix value stack leak in rare compiled call sequence

 -- Camm Maguire <camm@enhanced.com>  Tue, 13 Jul 2004 10:17:02 -0400

gcl (2.6.2-2) unstable; urgency=low

  * New upstream point release

 -- Camm Maguire <camm@enhanced.com>  Tue, 13 Jul 2004 10:08:53 -0400

gcl (2.6.2-1) unstable; urgency=low

  * gcc-3.4 support
  * Proper isnormal default courtesy of Magnus Henoch
  * gclclean makefile target and other small makefile changes
  * Proper check for C stack array body address in gbc.c and sgbc.c
  * New upstream release
  * acconfig.h update for isnormal default
  * Fix bug in setting elements (si::aset) of 0 rank arrays uncovered by
    the random tester